# PyMuPDF-Layout

./: .env.example  .gitattributes  .gitignore  Pictures.xlsx  README.md  ai_prompt.md  annotations.json  benchmark_filtered.csv  benchmark_granular.csv  benchmark_results_final.csv  benchmark_results_final_backup.csv  cleaned_output.json  combined_output.json  compare_folders.sh  docling_markdown.py  docling_test.py  gemini_markdown.py  hello.py  llama.py  llamaprse_markdown.py  markit_markdown.py  prod_benchmark.py  pymupdf4llm_markdown.py  pymupdflayout_markdown.py  pyproject.toml  reducto_markdown.py  test.ipynb  utils.py  verify.py
benchmark_data/: __init__.py  benchmark_filtered.csv  combined_output.json  page_folder_mapping.csv
datalab_markdowns/: page_100.md  page_106.md  page_107.md  page_108.md  page_110.md  page_113.md  page_114.md  page_115.md  page_116.md  page_117.md  page_118.md  page_120.md  page_121.md  page_125.md  page_126.md  page_127.md  page_129.md  page_17.md  page_18.md  page_22.md  page_25.md  page_26.md  page_3.md  page_30.md  page_32.md  page_33.md  page_35.md  page_36.md  page_39.md  page_4.md  page_40.md  page_43.md  page_47.md  page_53.md  page_55.md  page_56.md  page_6.md  page_60.md  page_61.md  page_62.md  (+16 more)
datalab_results/: results.jsonl
datalablllm_markdowns/: page_1.md  page_10.md  page_100.md  page_101.md  page_102.md  page_103.md  page_104.md  page_105.md  page_106.md  page_107.md  page_108.md  page_109.md  page_11.md  page_110.md  page_113.md  page_114.md  page_115.md  page_116.md  page_117.md  page_118.md  page_119.md  page_120.md  page_122.md  page_123.md  page_124.md  page_125.md  page_126.md  page_127.md  page_128.md  page_129.md  page_13.md  page_14.md  page_15.md  page_16.md  page_17.md  page_19.md  page_2.md  page_20.md  page_22.md  page_23.md  (+81 more)
(+1909 files in other folders)
