[project]
name = "prod-pdfbenchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autocorrect>=2.6.1",
    "clean-text>=0.6.0",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pymupdf>=1.26.5",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.1.8",
    "rapidfuzz>=3.14.0",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
