[project]
name = "prod-pdfbenchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "autocorrect>=2.6.1",
    "clean-text>=0.6.0",
    "docling>=2.64.0",
    "google-genai>=1.52.0",
    "llama-cloud-services>=0.6.88",
    "llama-parse>=0.6.88",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pymupdf>=1.26.6",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.0",
    "rapidfuzz>=3.14.0",
    "reductoai[aiohttp]>=0.13.0",
    "torch>=2.9.1",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
